# EconSight

./: .env.docker.example  .env.example  .gitignore  CLAUDE.md  Dockerfile  EconSight_PDR_Phase1.docx  README.md  docker-compose.yml  pyproject.toml  railway.toml
.github/workflows/: ci.yml  pipeline-cron.yml
.superpowers/brainstorm/3781-1781081061/: .server-stopped  favicon-pick.html  logo-options.html
.superpowers/brainstorm/63693-1781512214/: .server-stopped  design-themes.html  full-design.html  green-options.html  nav-style.html  typography.html
docs/superpowers/plans/: 2026-06-01-phase1-implementation.md  2026-06-04-phase2-implementation.md  2026-06-04-phase3-implementation.md  2026-06-07-phase4-devops.md  2026-06-08-portfolio-hardening.md  2026-06-09-railway-deployment.md  2026-06-15-ui-redesign.md  2026-06-16-powerbi-integration.md
docs/superpowers/specs/: 2026-06-01-phase1-design.md  2026-06-04-phase2-design.md  2026-06-04-phase3-design.md  2026-06-08-portfolio-hardening-design.md  2026-06-09-railway-deployment-design.md  2026-06-10-favicon-design.md  2026-06-15-ui-redesign-design.md
frontend/: Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/ui/: badge.tsx  button.tsx  select.tsx
frontend/src/pages/: About.tsx  Ask.tsx  Dashboard.tsx  Forecasts.tsx  Indicators.tsx  Report.tsx
notebooks/: phase2_analysis.ipynb  phase2_report.html  render.py
powerbi/: README.md
sql/: mart_monthly_macro.sql  stg_boc.sql  stg_statcan.sql
src/econsight/: config.py  pipeline.py
src/econsight/api/: dependencies.py  main.py  schemas.py
src/econsight/api/routers/: export.py  forecasts.py  indicators.py  rag.py  report.py  status.py
src/econsight/clients/: base.py  boc.py  statcan.py
src/econsight/db/: connection.py  loader.py  schema.sql  seed.py
src/econsight/models/: composite.py  features.py  forecaster.py  monte_carlo.py  shap_analysis.py  var_model.py  xgb_model.py
src/econsight/rag/: ingestion.py  query_engine.py  retriever.py
src/econsight/report/: brief.py  full_report.py  merger.py
tasks/: session_state.md
tests/: conftest.py  test_base_client.py  test_boc_client.py  test_config.py  test_export.py  test_loader.py  test_statcan_client.py
tests/fixtures/: boc_bond10yr.json  boc_cadusd.json  boc_m2pp.json  boc_overnight.json  statcan_cpi.json  statcan_gdp.json  statcan_ippi.json  statcan_retail.json  statcan_unemployment.json
tests/test_api/: test_forecasts.py  test_indicators.py  test_rag.py  test_report.py  test_status.py
tests/test_models/: test_composite.py  test_features.py  test_monte_carlo.py  test_var_model.py  test_xgb_model.py
