[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "econsight"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "tenacity>=8.3",
    "psycopg[binary]>=3.1",
    "pydantic-settings>=2.3",
    "structlog>=24.1",
    "rich>=13.0",
    "statsmodels>=0.14",
    "xgboost>=2.0",
    "shap>=0.44",
    "scikit-learn>=1.4",
    "pandas>=2.1",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "groq>=0.9",
    "chromadb>=0.5",
    "sentence-transformers>=3.0",
    "beautifulsoup4>=4.12",
    "weasyprint>=62.0",
    "pypdf>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "pandas-stubs>=2.1",
    "ruff>=0.4",
    "mypy>=1.10",
    "jupyter>=1.0",
    "nbconvert>=7.0",
]

[project.scripts]
econsight-run = "econsight.pipeline:main"

[tool.hatch.build.targets.wheel]
packages = ["src/econsight"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: requires live PostgreSQL (skip with '-m not integration')",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true

[[tool.mypy.overrides]]
module = ["joblib", "shap", "sklearn.*", "xgboost", "statsmodels.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["chromadb", "chromadb.*", "sentence_transformers", "weasyprint", "bs4", "pypdf"]
ignore_missing_imports = true
